Add Lifecycle Node Management

--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,8 @@
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>rcpputils</depend>
+  <depend>rclcpp_lifecycle</depend>
+  <depend>lifecycle_msgs</depend>
   <depend>std_msgs</depend>
   <depend>std_srvs</depend>
   <depend>example_interfaces</depend>
