--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,9 @@
   <depend>std_srvs</depend>
   <depend>example_interfaces</depend>
   <depend>eigen3</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+  <depend>geometry_msgs</depend>
   
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
