--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,7 @@ install(
 
 if(BUILD_TESTING)
   # LINT TESTING
-  # find_package(ament_lint_auto REQUIRED)
+  find_package(ament_lint_auto REQUIRED)
   # # the following line skips the linter which checks for copyrights
   # # comment the line when a copyright and license is added to all source files
   # set(ament_cmake_copyright_FOUND TRUE)
@@ -96,7 +96,7 @@ if(BUILD_TESTING)
   # # comment the line when this package is in a git repo and when
   # # a copyright and license is added to all source files
   # set(ament_cmake_cpplint_FOUND TRUE)
-  # ament_lint_auto_find_test_dependencies()
+  ament_lint_auto_find_test_dependencies()
 
   # UNIT TESTING
   find_package(ament_cmake_gtest REQUIRED)
