--- a/package.xml
+++ b/package.xml
@@ -24,6 +24,7 @@
   
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+  <!-- <test_depend>ament_cmake_clang_format</test_depend> -->
   <test_depend>launch_ros</test_depend>
   <test_depend>launch_testing_ament_cmake</test_depend>
   <test_depend>ament_cmake_gtest</test_depend>
